# HangarEngine

./: .gitignore  CMakeLists.txt  Generate.bat  README.MD  premake5.lua
Hangar/: HangarEngine.h  Precompiled.h  premake5.lua
Hangar/Assets/: AssetManager.cpp  AssetManager.h  AudioClip.h  MATLoader.cpp  MATLoader.h  MTLLoader.h  Material.cpp  Mesh.cpp  OBJLoader.cpp  OBJLoader.h  ShaderLoader.cpp  ShaderLoader.h  Texture2D.h  WAVLoader.cpp  WAVLoader.h
Hangar/Audio/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h
Hangar/Debug/: Assert.cpp  Assert.h  Logger.cpp  Logger.h
Hangar/Framework/: Entity.cpp  Entity.h  EntityRenderer.cpp  EntityRenderer.h  IComponent.cpp  IComponent.h  IRenderer.h  Identifier.cpp  Identifier.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Stopwatch.cpp  Stopwatch.h  Texture2D.cpp  Texture2D.h  TextureManager.cpp  TextureManager.h  Transform.cpp  Transform.h
Hangar/Helpers/: ByteHelper.cpp  ByteHelper.h  RandomGen.hpp  StringIterator.cpp  StringIterator.h  TimeHelper.cpp  TimeHelper.h
Hangar/IO/: File.cpp  File.h  FileGroup.cpp  FileGroup.h  FileSystem.cpp  FileSystem.h
Hangar/Math/: Color.cpp  Color.h  MathHelper.cpp  MathHelper.h  Matrix.cpp  Matrix.h  MeshData.h  MeshUtils.cpp  MeshUtils.h  Vectors.cpp  Vectors.h  VertexTypes.h
Hangar/Memory/: IAllocator.h  MemoryManager.cpp  MemoryManager.h
Hangar/Platform/: Console.cpp  Console.h  DynamicLibrary.cpp  DynamicLibrary.h  EntryPoint.h  GameWindow.cpp  GameWindow.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Hangar/Profiler/: Profiler.cpp  Profiler.h  ProfilerElement.cpp  ProfilerElement.h
Sandbox/: lighting.hlsl  main.cpp  material.hlsl  premake5.lua  standard3D.hlsl  test.hlsl  test.mtl
main/: main.cpp
src/: precompiled.h  premake5.lua
src/assets/: mesh.h  (+5 more)
(+130 files in other folders)
